deploy/overlays/sandbox/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roady-foody-api
spec:
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    spec:
      containers:
        - name: roady-foody-api
      nodeSelector:
        performance: high
