deploy/overlays/sandbox/patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roady-foody-api
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    spec:
      containers:
        - name: roady-foody-api
